8275415: Prepare Leak Profiler for Lilliput

Backport-of: c41ce6d159e59a8c05dbeacde2d2612b58733d46